--- a/styles/header.css
+++ b/styles/header.css
@@ -22,3 +22,9 @@
     padding: 0px 50px;
   }
 }
+
+@media screen and (max-width: 425px) {
+  .main-header {
+    padding: 0px 20px;
+  }
+}
