--- a/styles/populars.css
+++ b/styles/populars.css
@@ -78,3 +78,10 @@
     margin-bottom: 24px;
   }
 }
+
+@media screen and (max-width: 425px) {
+  .populars {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
